--- a/.github/workflows/build-manager.yml
+++ b/.github/workflows/build-manager.yml
@@ -19,9 +19,7 @@ jobs:
     strategy:
       matrix:
         include:
-          - target: aarch64-linux-android
-            os: ubuntu-latest
-          - target: x86_64-linux-android
+          - target: armv7-linux-androideabi
             os: ubuntu-latest
     uses: ./.github/workflows/ksud.yml
     with:
@@ -76,24 +74,16 @@ jobs:
       - name: Setup Android SDK
         uses: android-actions/setup-android@v3
 
-      - name: Download arm64 ksud
+      - name: Download arm32 ksud
         uses: actions/download-artifact@v4
         with:
-          name: ksud-aarch64-linux-android
-          path: .
-
-      - name: Download x86_64 ksud
-        uses: actions/download-artifact@v4
-        with:
-          name: ksud-x86_64-linux-android
+          name: ksud-armv7-linux-androideabi
           path: .
 
       - name: Copy ksud to app jniLibs
         run: |
-          mkdir -p app/src/main/jniLibs/arm64-v8a
-          mkdir -p app/src/main/jniLibs/x86_64
-          cp -f ../aarch64-linux-android/release/ksud ../manager/app/src/main/jniLibs/arm64-v8a/libksud.so
-          cp -f ../x86_64-linux-android/release/ksud ../manager/app/src/main/jniLibs/x86_64/libksud.so
+          mkdir -p app/src/main/jniLibs/armeabi-v7a
+          cp -f ../armv7-linux-androideabi/release/ksud ../manager/app/src/main/jniLibs/armeabi-v7a/libksud.so
 
       - name: Build with Gradle
         run: |
