--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -37,8 +37,8 @@ ifeq ($(shell grep -q "struct selinux_state " $(srctree)/security/selinux/includ
 ccflags-y += -DKSU_COMPAT_HAS_SELINUX_STATE
 endif
 
-KSU_EXPECTED_SIZE := 0x033b
-KSU_EXPECTED_HASH := c371061b19d8c7d7d6133c6a9bafe198fa944e50c1b31c9d8daa8d7f1fc2d2d6
+KSU_EXPECTED_SIZE := 0x395
+KSU_EXPECTED_HASH := 9b1d39c4f7ea2c796b0f06fa98fcbc9398065c97968317ea9ae3c3af40b92843
 
 ifdef KSU_MANAGER_PACKAGE
 ccflags-y += -DKSU_MANAGER_PACKAGE=\"$(KSU_MANAGER_PACKAGE)\"
